fix bug :  jump next / prev floor

--- a/hjj/css/app.css
+++ b/hjj/css/app.css
@@ -86,7 +86,7 @@ input,select {
 
 .smallnav {
     text-align : left;
-    width: 16.65% !important;  
+    width: 15% !important;  
     clear: none !important;  
 }
 
